@@ -9,6 +9,9 @@ changes relative to sbcl-2.3.0:
   * sb-graph has been removed. To visualize IR1 in sbcl, it is recommended to
     use the function IR1-TO-DOT (which only survives the final tree shake if
     the feature :sb-devel is enabled at build time).
+  * bug fix: method combination group selection interprets the symbol * as
+    a wildcard element within proper qualifier-pattern lists.  (reported by
+    Daniel Kochmański)
 
 changes in sbcl-2.3.0 relative to sbcl-2.2.11:
   * enhancement: support for SLOT-VALUE and friends has been extended to
